@@ -1,5 +1,12 @@
 2023-05-18 Riccardo Mottola <rm@gnu.org>
 
+	* DBSoap.h
+	* DBSoap.m: [interpretString: forField: forObject:]
+	new method that parses a string in a local format respeting the type
+	of the object describe and output it again in SF format.
+
+2023-05-18 Riccardo Mottola <rm@gnu.org>
+
 	* DBSFTypeWrappers.m:
 	Fix and correctly parse and output SF yyyy-MM-dd'T'HH:mm:ss.000'Z'
 	format
